changed nav link html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
                     Graph 3
             </li>
         </ol>
-        <a href="../index.html"> <i> Back to main directory </i> </a>
+        <a href="../other"> <i> Back to main directory </i> </a>
     </body>
 </html>
